@@ -150,7 +150,7 @@ namespace lsp
             const lsp_wchar_t *v = pString->characters();
             v       += nOffset;
             nOffset += count;
-            ::memcpy(dst, v, avail * sizeof(lsp_wchar_t));
+            ::memcpy(dst, v, count * sizeof(lsp_wchar_t));
 
             // Reset mark if it was set
             if ((nMark > 0) && (nOffset > size_t(nMark + nMarkLen)))
